--- a/ALLProject/pos/templates/pos/navigation.html
+++ b/ALLProject/pos/templates/pos/navigation.html
@@ -1,5 +1,9 @@
 {% load static %}
 {% block nav%}
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mukta+Mahee:wght@200;300;400;500;600;700;800&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
 <link rel = "stylesheet" href="{% static "css/navigation.css" %}">
 <div class="navigation-column" id="navcolumn">
     <!-- Cashier View -->
@@ -10,5 +14,6 @@
     <a class="nav"><img src="{% static "assets/logout.png" %}" class="logo"><p class="navfull"> Logout</p></a>
 </div>
 {% endblock nav%}
+
 {% block content %}
 {% endblock %}
