--- a/ALLProject/pos/templates/pos/sales_cart.html
+++ b/ALLProject/pos/templates/pos/sales_cart.html
@@ -1,4 +1,5 @@
 {% extends "pos/sales_page.html" %}
+<!DOCTYPE html>
 {% load static %}
 
 {% block cart %}
@@ -51,7 +52,9 @@
             <div class="checkout-box">
                 <div class="check-out subtotal">
                     <h4>Subtotal</h4>
-                    <h4>RM 0.00</h4>
+                    <h4>RM {% if cart %}{{ cart_cost|floatformat:2 }}
+                        {% else %}0.00{% endif %}
+                    </h4>
                 </div>
                 <div class="check-out discount">
                     <h4>Discount</h4>
@@ -63,128 +66,148 @@
                 </div>
                 <div class="check-out total">
                     <h3>Total</h3>
-                    <h3>RM 0.00</h3>
+                    <h3>RM {% if cart %}{{ cart_cost|floatformat:2 }}
+                        {% else %}0.00{% endif %}
+                    </h3>
                 </div>
-                <form action="" method="post" id='checkout_form'>
-                    {% csrf_token %}
-                    <input type="hidden" name="check_out" value="true">
-                    <button type="submit" class="checkOut-Bttn" id="checkOutBttn">Check-Out</button>
-                </form>
+                <button type="button" class="checkOut-Bttn" id="checkOutBttn">Check-Out</button>
             </div>
         </div>
     </div>
-    {% comment %} <div class="dimmer"></div>
+
+    <div class="dimmer"></div>
     <div class="payment">
-        <div class="payment-box cash">
-            <button type="button" id="close-box"><img src="{% static 'assets/back-arrow.png' %}" alt="back-arrow" id="close"></button>
-            <h2 class="boxTitle">Payment Method</h2>
-            <div class="payment-button">
-                <button type="button" class="cashBttn" onclick="changePayment('cashBttn')"
-                style="width: 25%; height: 5vh; margin-right: 5%;
-                        font-family: 'Mukta Mahee', sans-serif; font-weight: 500; font-size: 1.2vw; font-style: normal;
-                        background: #815355; color: #FFF; border-radius: 20px; border-style: none;">
-                    Cash
-                </button>
-                <button type="button" class="cardBttn" onclick="changePayment('cardBttn')"
-                style="width: 25%; height: 5vh; margin-right: 5%;
-                        font-family: 'Mukta Mahee', sans-serif; font-weight: 500; font-size: 1.2vw; font-style: normal;
-                        border-radius: 20px; border-style: none; background: #D9D9D9; color: #595959;">
-                    Credit/Debit Card
-                </button>
-            </div>
-            <div class="payment-content">
-                <div class="payment-details">
-                    <div class="receipt-detail">
-                        <h3>RECEIPT ID</h3>
-                        <h3>1100011111</h3>
-                    </div>
-                    <div class="receipt-detail">
-                        <h3>TOTAL COST</h3>
-                        <h3>RM 0.00</h3>
-                    </div>
-                    <div class="receipt-detail">
-                        <h3>PAID</h3>
-                        <div style="display: flex;">
-                            <h3 id="cash-value">RM   </h3>
-                            <input type="number" name="paid" id="cash-paid">
-                        </div>                            
-                    </div>
-                    <div class="receipt-detail">
-                        <h3>CHANGE DUE</h3>
-                        <h3>RM 0.00</h3>
-                    </div>
-                    <button type="button" class="donePayment-bttn">DONE PAYMENT</button>
+        <form action="{% url 'sales' %}" method="post" id='checkout_form'>
+            {% csrf_token %}
+            {{ checkout_form.check_out }}
+            {{ checkout_form.payment_method }}
+
+            <div class="payment-box cash">
+                <button type="button" id="close-box"><img src="{% static 'assets/back-arrow.png' %}" alt="back-arrow" id="close"></button>
+                <h2 class="boxTitle">Payment Method</h2>
+                <div class="payment-button">
+                    <button type="button" class="cashBttn" onclick="changePayment('cashBttn')"
+                    style="width: 25%; height: 5vh; margin-right: 5%;
+                            font-family: 'Mukta Mahee', sans-serif; font-weight: 500; font-size: 1.2vw; font-style: normal;
+                            background: #815355; color: #FFF; border-radius: 20px; border-style: none;">
+                        Cash
+                    </button>
+                    <button type="button" class="cardBttn" onclick="changePayment('cardBttn')"
+                    style="width: 25%; height: 5vh; margin-right: 5%;
+                            font-family: 'Mukta Mahee', sans-serif; font-weight: 500; font-size: 1.2vw; font-style: normal;
+                            border-radius: 20px; border-style: none; background: #D9D9D9; color: #595959;">
+                        Credit/Debit Card
+                    </button>
                 </div>
-                <div class="keyboardBox">
-                <button type="button" class="keyboard" value="1">1</button>
-                <button type="button" class="keyboard" value="2">2</button>
-                <button type="button" class="keyboard" value="3">3</button>
-                <button type="button" class="keyboard" value="4">4</button>
-                <button type="button" class="keyboard" value="5">5</button>
-                <button type="button" class="keyboard" value="6">6</button>
-                <button type="button" class="keyboard" value="7">7</button>
-                <button type="button" class="keyboard" value="8">8</button>
-                <button type="button" class="keyboard" value="9">9</button>
-                <button type="button" class="keyboard clear">Clear All</button>
-                <button type="button" class="keyboard" value="0">0</button>
-                <button type="button" class="keyboard cancel">Cancel</button>
-                </div>
-            </div>
-        </div>
-        <div class="payment-box card">
-            <button type="button" id="close-box"><img src="{% static 'assets/back-arrow.png' %}" alt="back-arrow" id="close"></button>
-            <h2 class="boxTitle">Payment Method</h2>
-            <div class="payment-button">
-                <button type="button" class="cashBttn" onclick="changePayment('cashBttn')"
-                style="width: 25%; height: 5vh; margin-right: 5%;
-                        font-family: 'Mukta Mahee', sans-serif; font-weight: 500; font-size: 1.2vw; font-style: normal;
-                        background: #D9D9D9; color: #595959; border-radius: 20px; border-style: none;">
-                    Cash
-                </button>
-                <button type="button" class="cardBttn" onclick="changePayment('cashBttn')"
-                style="width: 25%; height: 5vh; margin-right: 5%;
-                        font-family: 'Mukta Mahee', sans-serif; font-weight: 500; font-size: 1.2vw; font-style: normal;
-                        background: #815355; color: #FFF; border-radius: 20px; border-style: none;">
-                    Credit/Debit Card
-                </button>
-            </div>
-            <div class="payment-content">
-                <div class="payment-details">
-                    <div class="receipt-detail">
-                        <h3>RECEIPT ID</h3>
-                        <h3>1100011111</h3>
-                    </div>
-                    <div class="receipt-detail">
-                        <h3>TOTAL COST</h3>
-                        <h3>RM 0.00</h3>
-                    </div>
-                    <div id="card-input-box">
-                        <div class="card-input first">
-                            <img src="{% static 'assets/credit-card.png' %}" alt="card.png" id="bank-icon">
-                            <input type="text" name="card-info" class="card-info" placeholder="Card Number">
+
+                <div class="payment-content">
+                    <div class="payment-details">
+                        <div class="receipt-detail">
+                            <h3>RECEIPT ID</h3>
+                            <h3>1100011111</h3>
                         </div>
-                        <div class="card-input sec">
-                            <input type="text" name="expiry" class="card-info sec expiry" placeholder="MM/YY">
-                            <input type="text" name="cvv" class="card-info sec cvv" placeholder="Security Num">
+                        <div class="receipt-detail">
+                            <h3>TOTAL COST</h3>
+                            <h3>RM {{ cart_cost|floatformat:2 }}</h3>
                         </div>
+                        <div class="receipt-detail">
+                            <h3>PAID</h3>
+                            <div style="display: flex;">
+                                <h3 id="cash-value">RM   </h3>
+                                {{ checkout_form.cashPaid }}
+                                {% comment %} <input type="text" name="paid" id="cash-paid"> {% endcomment %}
+                            </div>                            
+                        </div>
+                        <div class="receipt-detail">
+                            <h3>CHANGE DUE</h3>
+                            <h3 id="changeAmount">RM 
+                                {% comment %} {% if checkout_form.paid.value %}
+                                    {% with change=checkout_form.cashPaid.value-cart_cost %}
+                                        {{ change|floatformat:2 }}
+                                    {% endwith %}
+                                {% else %}0.00
+                                {% endif %} {% endcomment %}
+                            </h3>
+                        </div>
+                        <button type="submit" class="donePayment-bttn" id="doneCash-Payment" data-payment="cash">DONE PAYMENT</button>
                     </div>
-                    <button type="button" class="donePayment-bttn">DONE PAYMENT</button>
-                </div>
-                <div class="keyboardBox">
-                <button type="button" class="keyboard" value="1">1</button>
-                <button type="button" class="keyboard" value="2">2</button>
-                <button type="button" class="keyboard" value="3">3</button>
-                <button type="button" class="keyboard" value="4">4</button>
-                <button type="button" class="keyboard" value="5">5</button>
-                <button type="button" class="keyboard" value="6">6</button>
-                <button type="button" class="keyboard" value="7">7</button>
-                <button type="button" class="keyboard" value="8">8</button>
-                <button type="button" class="keyboard" value="9">9</button>
-                <button type="button" class="keyboard clear">Clear All</button>
-                <button type="button" class="keyboard" value="0">0</button>
-                <button type="button" class="keyboard cancel">Cancel</button>
+                    <div class="keyboardBox">
+                    <button type="button" class="keyboard-cash" value="1">1</button>
+                    <button type="button" class="keyboard-cash" value="2">2</button>
+                    <button type="button" class="keyboard-cash" value="3">3</button>
+                    <button type="button" class="keyboard-cash" value="4">4</button>
+                    <button type="button" class="keyboard-cash" value="5">5</button>
+                    <button type="button" class="keyboard-cash" value="6">6</button>
+                    <button type="button" class="keyboard-cash" value="7">7</button>
+                    <button type="button" class="keyboard-cash" value="8">8</button>
+                    <button type="button" class="keyboard-cash" value="9">9</button>
+                    <button type="button" class="keyboard-cash clear">Clear All</button>
+                    <button type="button" class="keyboard-cash" value="0">0</button>
+                    <button type="button" class="keyboard-cash decimal" value=".">.</button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div> {% endcomment %}
+
+            <div class="payment-box card">
+                <button type="button" id="close-box"><img src="{% static 'assets/back-arrow.png' %}" alt="back-arrow" id="close"></button>
+                <h2 class="boxTitle">Payment Method</h2>
+                <div class="payment-button">
+                    <button type="button" class="cashBttn" onclick="changePayment('cashBttn')"
+                    style="width: 25%; height: 5vh; margin-right: 5%;
+                            font-family: 'Mukta Mahee', sans-serif; font-weight: 500; font-size: 1.2vw; font-style: normal;
+                            background: #D9D9D9; color: #595959; border-radius: 20px; border-style: none;">
+                        Cash
+                    </button>
+                    <button type="button" class="cardBttn" onclick="changePayment('cardBttn')"
+                    style="width: 25%; height: 5vh; margin-right: 5%;
+                            font-family: 'Mukta Mahee', sans-serif; font-weight: 500; font-size: 1.2vw; font-style: normal;
+                            background: #815355; color: #FFF; border-radius: 20px; border-style: none;">
+                        Credit/Debit Card
+                    </button>
+                </div>
+
+                <div class="payment-content">
+                    <div class="payment-details">
+                        <div class="receipt-detail">
+                            <h3>RECEIPT ID</h3>
+                            <h3>1100011111</h3>
+                        </div>
+                        <div class="receipt-detail">
+                            <h3>TOTAL COST</h3>
+                            <h3>RM {{ cart_cost|floatformat:2 }}</h3>
+                        </div>
+                        <div id="card-input-box">
+                            <div class="card-input first">
+                                <img src="{% static 'assets/credit-card.png' %}" alt="card.png" id="bank-icon">
+                                {{ checkout_form.card_number }}
+                                {% comment %} <input type="text" name="card_number" class="card-info" id="cardNo" placeholder="Card Number" 
+                                maxlength="16"> {% endcomment %}
+                            </div>
+                            <div class="card-input sec">
+                                {{ checkout_form.expiry }}
+                                {{ checkout_form.cvv }}
+                                {% comment %} <input type="text" name="expiry" class="card-info sec expiry" id="cardExp" placeholder="MM/YY" maxlength="5">
+                                <input type="text" name="cvv" class="card-info sec cvv" id="cardCVV" placeholder="Security Num" maxlength="4"> {% endcomment %}
+                            </div>
+                        </div>
+                        <button type="submit" class="donePayment-bttn" id="doneCard-Payment" data-payment="debit_card">DONE PAYMENT</button>
+                    </div>
+                    <div class="keyboardBox">
+                    <button type="button" class="keyboard-card" value="1">1</button>
+                    <button type="button" class="keyboard-card" value="2">2</button>
+                    <button type="button" class="keyboard-card" value="3">3</button>
+                    <button type="button" class="keyboard-card" value="4">4</button>
+                    <button type="button" class="keyboard-card" value="5">5</button>
+                    <button type="button" class="keyboard-card" value="6">6</button>
+                    <button type="button" class="keyboard-card" value="7">7</button>
+                    <button type="button" class="keyboard-card" value="8">8</button>
+                    <button type="button" class="keyboard-card" value="9">9</button>
+                    <button type="button" class="keyboard-card clear">Clear All</button>
+                    <button type="button" class="keyboard-card" value="0">0</button>
+                    <button type="button" class="keyboard-card back">Back</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 {% endblock %}
